--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,6 +65,13 @@ input[type=submit]:hover {
 
 h1.loginTitle{
 	font-family: "Raleway", Arial, Helvetica, sans-serif;
+	text-align: center;
+	color: 00456A;
+	
+}
+
+h1.signInTitle{
+	font-family: "Raleway", Arial, Helvetica, sans-serif;
 	font-weight: lighter;
 	text-align: center;
 	color: 00456A;
